--- a/app/src/main/res/layout/lt_principal.xml
+++ b/app/src/main/res/layout/lt_principal.xml
@@ -48,8 +48,8 @@
         android:layout_alignEnd="@+id/destino" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
